Navbar loads. Now looking into loading json into models.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <!-- Home made scripts -->
     <script src="js/libs/templateLoader.js"></script>
   
+    <!-- Models -->
+    <script src="js/models/audienceModel.js"></script>
+
     <!-- Views -->
     <script src="js/views/navbarView.js"></script>
     <script src="js/views/appView.js"></script>
     <script src="js/routers/router.js"></script>
+    <script src="js/libs/navbar_init.js"></script>
 
 
     <!-- App setup -->
@@ -30,11 +34,13 @@
 </head>
 
 <!-- Initialisation -->
-<!-- <body onload="$init()"> -->
+ <body>
 
 <!--AppView Container-->
 
 <nav id="nav">
+
+ 
     
 </nav>
 
