Audience graph view functional. Also added a favicon to silence the warning.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/models/audienceModel.js"></script>
 
     <!-- Views -->
+    <script src="js/views/audienceView.js"></script>
     <script src="js/views/navbarView.js"></script>
     <script src="js/views/appView.js"></script>
     <script src="js/routers/router.js"></script>
