Added CDN & P2P BW/usage graphs.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
   
     <!-- Models -->
     <script src="js/models/audienceModel.js"></script>
+    <script src="js/models/countryModel.js"></script>
+    <script src="js/models/usageBandWidthModel.js"></script>
 
     <!-- Views -->
     <script src="js/views/audienceView.js"></script>
+    <script src="js/views/usageBandwidthView.js"></script>
     <script src="js/views/navbarView.js"></script>
-    <script src="js/views/appView.js"></script>
+
+    <!-- Router -->
     <script src="js/routers/router.js"></script>
+
+    <!-- Navbar init -->
     <script src="js/libs/navbar_init.js"></script>
 
 
@@ -37,11 +43,11 @@
 <!-- Initialisation -->
  <body>
 
-<!--AppView Container-->
 
 <nav id="nav">
 
 </nav>
+<!--AppView Container-->
 
 <div class="appViewContainer">
 
