Finished 3rd view.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <script src="js/libs/backbone-min.js"></script>
     <script src="js/libs/materialize.min.js"></script>
     <script src="js/libs/handlebars-v4.0.5.js"></script>
+    <script src="https://vega.github.io/vega/assets/promise.min.js"></script>
     <script src="js/libs/vega.min.js"></script>
 
     <!-- Home made scripts -->
     <script src="js/libs/templateLoader.js"></script>
+    <script src="js/libs/SaveImage.js"></script>
   
     <!-- Models -->
     <script src="js/models/audienceModel.js"></script>
@@ -27,6 +29,7 @@
     <!-- Views -->
     <script src="js/views/audienceView.js"></script>
     <script src="js/views/usageBandwidthView.js"></script>
+    <script src="js/views/countryView.js"></script>
     <script src="js/views/navbarView.js"></script>
 
     <!-- Router -->
