Final commit. Added a splash screen, some styling and an instruction file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Lib imports -->
     <script src="js/libs/jquery-3.2.1.min.js"></script>
@@ -27,6 +28,7 @@
     <script src="js/models/usageBandWidthModel.js"></script>
 
     <!-- Views -->
+    <script src="js/views/splashView.js"></script>
     <script src="js/views/audienceView.js"></script>
     <script src="js/views/usageBandwidthView.js"></script>
     <script src="js/views/countryView.js"></script>
@@ -47,7 +49,7 @@
  <body>
 
 
-<nav id="nav">
+<nav id="nav" class="teal darken-1">
 
 </nav>
 <!--AppView Container-->
